# cpp-project-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  benchmark_hello.cpp
docs/: Doxyfile
docs/doxygen-awesome-css/doxygen-custom/: header.html
scripts/: build_all.sh  install_dependencies.sh  test_all.sh
src/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
tests /: CMakeLists.txt
